# forma

./: .clippy.toml  Cargo.toml  README.md  rust-toolchain
.github/workflows/: ci.yml
forma-build-utils/: Cargo.toml
forma-build-utils/src/: lib.rs
forma-core/: Cargo.toml
forma-core/src/: hlist.rs  lib.rs
forma-core/tests/: hlist_test.rs
forma-macro/: Cargo.toml
forma-macro/src/: lib.rs
forma-macro/tests/: aggregate.rs
forma-macro/tests/failed/: usize_failed1.rs  usize_failed1.stderr
forma-macro/tests/success/: case2.rs  typenum_success1.rs  usize_success1.rs  usize_success2.rs
forma-typenum/: Cargo.toml
forma-typenum/src/: lib.rs  typenum.rs  usize.rs
forma-typenum/src/typenum/: add.rs  mul.rs  sub.rs
