[package]
name = "forma-macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0"
syn = "1.0.107"
forma-build-utils = { path = "../forma-build-utils" }

[dev-dependencies]
trybuild = "1.0"
forma-typenum = { path = "../forma-typenum" }

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/aggregate.rs"